--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
   <link rel="shorticon icon" type="image/x-icon" href="/favicon.ico?v=0.4.5.2" />
 
 
-<meta name="description">
 <meta property="og:type" content="website">
-<meta property="og:title" content="patrickliu's blog">
+<meta property="og:title" content="patrickliu&#39;s blog">
 <meta property="og:url" content="http://git-patrickliu.github.io/index.html">
-<meta property="og:site_name" content="patrickliu's blog">
-<meta property="og:description">
+<meta property="og:site_name" content="patrickliu&#39;s blog">
+<meta property="og:locale" content="zh-Hans">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="patrickliu's blog">
-<meta name="twitter:description">
+<meta name="twitter:title" content="patrickliu&#39;s blog">
 
 
 <script type="text/javascript" id="hexo.configuration">
@@ -1024,7 +1022,7 @@ pip是安装python的一个命令。如何安装pip，大家可以百度一
       <div class="footer-inner"> <div class="copyright" >
   
   &copy; &nbsp; 
-  <span itemprop="copyrightYear">2017</span>
+  <span itemprop="copyrightYear">2019</span>
   <span class="with-love">
     <i class="icon-next-heart"></i>
   </span>
